# visbench

./: .gitignore  .gitmodules  BENCHMARKS.md  DATASETS.md  LICENSE  README.md  pyproject.toml
panels/: classical_methods.txt  core.txt  extended.txt  sota_methods.txt
scripts/: download_all_auto.py  verify_install.py
tests/: test_cli.py  test_dispatch.py  test_download_sources.py  test_metrics.py  test_per_benchmark.py  test_registry.py
visbench/: __init__.py  __main__.py  reference_scores.json
visbench/core/: __init__.py  harness.py
visbench/core/metrics/: __init__.py  classical.py  homography.py  pose.py
visbench/datasets/: __init__.py  _download.py  _minima_homography.py  _registry.py  aachen_hloc.py  aachen_pairs.py  blendedmvs.py  co3d.py  dtu_mvs.py  eth3d.py  evd.py  hpatches.py  hpatches_patches.py  hpatches_rotated.py  icl_nuim.py  imc_pt.py  inloc_local.py  inloc_pairs.py  kitti_odometry.py  megadepth1500.py  megadepth_lo_overlap.py  minima_diode.py  minima_dsec.py  minima_md1500_syn.py  minima_metu_vistir.py  minima_mmim.py  oxford_affine.py  resolution_sweep.py  sacre_coeur.py  seven_scenes.py  sevenscenes_local.py  silda.py  strecha.py  synthetic.py  synthetic_advanced.py  synthetic_compound.py  synthetic_geometric.py  tartanair.py  tum_rgbd.py  wxbs.py  (+2 more)
visbench/methods/: __init__.py  _registry.py  base.py  classical.py  vismatch_loader.py
visbench/orchestrators/: __init__.py  batch.py  reporting.py  run.py  standard.py
